# scala-llvm

./: .gitignore  build.sbt
project/: build.properties  plugins.sbt
src/main/cpp/: CMakeLists.txt  llvm_tools.cpp
src/main/scala/org/llvm/: BasicBlock.scala  Builder.scala  CallingConvention.scala  CallingConventions.scala  CompiledFunction.scala  Context.scala  Engine.scala  Function.scala  IntPredicate.scala  LLVMObjectWrapper.scala  Linkage.scala  Module.scala  ModuleFlagBehaviour.scala  PassManager.scala  Target.scala  TargetData.scala  TargetMachine.scala  Type.scala  Value.scala  Visibility.scala  api.scala  package.scala
src/main/scala/org/llvm/dwarf/: DIBuilder.scala  DICompileUnit.scala  DIExpression.scala  DIFile.scala  DILexicalBlock.scala  DILocation.scala  DIModule.scala  DINode.scala  DIScope.scala  DISubprogram.scala  DIType.scala  DIVariable.scala  EmissionKind.scala  Flag.scala  Metadata.scala  MetadataNode.scala
src/main/scala/org/llvm/dwarf/encoding/: Accessibility.scala  BaseType.scala  ChildDetermination.scala  DecimalSign.scala  Endianity.scala  Language.scala  Tag.scala  UnitHeader.scala  Virtuality.scala  Visibility.scala
src/test/scala/org/llvm/: BuilderTest.scala  ContextTest.scala  EngineTest.scala  ExecutionTest.scala  ModuleTest.scala
